# odin

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yaml  docker-compose.yml  flows.md  implementation.md  install.sh  justfile  pyproject.toml  release.sh  spec.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_core.py  0002_ingest.py  0003_embeddings.py  0004_graph.py  0005_procrastinate.py  0006_objectives.py  0007_sleep_runs.py  0008_object_embeddings.py
backend/odin/: config.py  db.py  errors.py  graphdb.py  logging.py  main.py  models.py  schemas.py  security.py  seed.py  tenancy.py
backend/odin/api/: admin.py  ask.py  auth.py  deps.py  documents.py  graph.py  ingest.py  jobs.py  search.py  sleep.py
backend/odin/models/: __init__.py  chunk.py  document.py  embedding.py  enums.py  graph_mutation.py  job.py  object_embedding.py  org.py  sleep_run.py  token.py  user.py
backend/odin/schemas/: __init__.py  ask.py  auth.py  document.py  graph.py  ingest.py  job.py  org.py  search.py  sleep.py  token.py  user.py
backend/odin/scripts/: backfill_object_embeddings.py
backend/odin/services/: answering.py  auth.py  blobs.py  chunking.py  converters.py  documents.py  embedding.py  extraction.py  graph.py  ingest.py  insights.py  llm.py  mutations.py  objectives.py  ontology.py  orgs.py  reranker.py  resolution.py  retrieval.py  sleep.py  users.py
backend/odin/worker/: __main__.py  app.py  handlers.py  queue.py  runner.py  tasks.py
backend/tests/: conftest.py  test_admin_api.py  test_answering.py  test_ask_api.py  test_auth_api.py  test_blobs.py  test_chunking.py  test_config.py  test_consolidation.py  test_converters.py  test_db.py  test_documents_api.py  test_embedding.py  test_errors.py  test_extraction.py  test_graph_access.py  test_graph_api.py  test_incremental_consolidate.py  test_ingest_api.py  test_isolation.py  test_jobs_api.py  test_llm.py  test_migrations.py  test_mutations.py  test_object_embeddings.py  test_objectives.py  test_ontology.py  test_pipeline_l1.py  test_pipeline_l2.py  test_pipeline_l3.py  test_queue.py  test_reranker.py  test_resolution.py  test_retrieval_graph.py  test_retrieval_vector.py  test_search_api.py  test_security.py  test_sleep_api.py  test_smoke.py  test_tenancy.py  (+1 more)
cli/: pyproject.toml
cli/odin_cli/: client.py  config.py  main.py  output.py
cli/odin_cli/commands/: admin.py  ask.py  graph.py  ingest.py  login.py  search.py  sleep.py
cli/tests/: test_cli.py  test_cli_ask.py  test_cli_graph.py  test_cli_ingest.py  test_cli_obj.py
design_doc/: 001_end_to_end_ingestion.md  002_l3_graph_hardening.md  003_consolidation_and_insight.md  004_drop_org_single_brain.md
docker/postgres/: Dockerfile  init.sql
integration_test/: README.md  ask.py  ask_eval.md  corpus_probes.md  run.py
integration_test/corpus/org/: all_hands_notes.txt  board_meeting_2026_q1.md  company_wiki.html  competitive_intel.md  customer_contract_summary.md  engineering_update.md  org_chart.md  press_release.html  product_roadmap.md  quanta_diligence_brief.md  sales_update.md  strategy_offsite.md  supply_chain_review.md
integration_test/corpus/personal/: 1on1_dana.md  1on1_priya.md  acquisition_notes_quanta.md  board_prep_notes.md  candid_team_assessment.txt  investor_thoughts.txt  mara_2026_objectives.md  personal_todos.md  succession_planning.txt
