[project]
name = "odin"
version = "0.0.0"
description = "Odin — the seeker of knowledge (monorepo workspace root)"
requires-python = ">=3.12"

# The root is a coordinator, not an installable package.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["backend", "cli"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "tiktoken.*", "bs4.*", "pgvector.*", "openai.*", "yaml.*"]
ignore_missing_imports = true
