[project]
name = "odin-backend"
version = "0.0.0"
description = "Odin backend: API server + worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary,pool]>=3.2",
    "procrastinate>=2.0",
    "alembic>=1.13",
    "pgvector>=0.3",
    "boto3>=1.34",            # S3-compatible blob store (MinIO/S3)
    "anthropic>=0.39",        # Claude — generation + extraction
    "openai>=1.40",           # embeddings (text-embedding-3-small); swappable
    "httpx>=0.27",
    "python-multipart>=0.0.9",  # file uploads
    "tiktoken>=0.7",          # token-bounded chunking
    "beautifulsoup4>=4.12",   # HTML -> text conversion
]
# Reranker vendor is intentionally undecided (see spec §14) — added later.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odin"]
