[project]
name = "odin-cli"
version = "0.0.0"
description = "Odin CLI — a thin client over the Odin API"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
odin = "odin_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odin_cli"]
